# SpectralStokesIBMethod

./: CMakeLists.txt  README.md
Doc/LaTeX/: spread_interp.tex  stokes_solver.bib  stokes_solver_doc.tex
cmake.in/: README.md
examples/: DPStokes.py  DPStokes_bench.py  DPStokes_bottom_wall_self_mob.py  DPStokes_slit_channel_self_mob.py  TPStokes.py  TriplyPeriodicStokes.py  hasimoto.py  hasimoto_DP.py  hasimoto_DP_plot.py  hasimoto_TP.py  hasimoto_TP_plot.py  hasimoto_plot.py
include/: BoundaryConditions.h  DPTools.h  Grid.h  LinearSolvers.h  ParticleList.h  SpeciesList.h  SpreadInterp.h  Transform.h  exceptions.h
python/: Chebyshev.py  Ghost.py  Grid.py  Particles.py  Solvers.py  Species.py  SpreadInterp.py  Transform.py  TriplyPeriodicStokes.py
src/: DPTools.cpp  Grid.cpp  LinearSolvers.cpp  ParticleList.cpp  Quadrature.cpp  SpeciesList.cpp  SpreadInterp.cpp  Transform.cpp  quadrature.cpp
testing/: CMakeLists.txt  test_cheb.cpp  test_spread_DP.cpp  test_spread_TP.cpp  test_transform_TP.cpp
wrapper/: BCWrapper.cpp  GridWrapper.cpp  ParticleListWrapper.cpp  SpreadInterpWrapper.cpp  TransformWrapper.cpp
